--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Meme Generator 4</title>
   </head>
 
-  <body onload="onInit()" class="main-layout">
+  <body onload="onInit()" class="main-layout" onresize="resizeCanvas()">
     <header class="main-header flex nav">
       <div class="logo">Meme</div>
       <button onclick="onRenderRndImg()" class="flex-btn">I'M Flexible!</button>
@@ -39,10 +39,10 @@
     </section>
 
     <section class="editor">
-      <div class="canvas-container">
+      <div class="canvas-container" >
         <canvas
-          width="500px"
-          height="500px"
+          width="300px"
+          height="300px"
           style="outline: 1px solid green"
           id="my-canvas"
         ></canvas>
