some design changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     
     <div id="search-bar" class="search-bar">
-      <input
+      <!-- <input
         data-trans="search-fliter"
         type="search"
         id="query"
@@ -32,14 +32,15 @@
       />
       <button data-trans="search-button" onclick="onSetSearchBy()">
         Search
-      </button>
-      <input list="browsers" name="browser" id="browser">
+      </button> -->
+      <input list="browsers" name="browser" id="browser" >
     <datalist id="browsers">
       <option value="Funny">
       <option value="President">
       <option value="Dog">
       <option value="Cat">
       <option value="Idiotic">
+      <option value="Baby">
     </datalist>
     <input type="submit" onclick="onFilterByKeyword()">
     </div>
