flexible feature prototype

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body onload="onInit()" class="main-layout" >
     <header class="main-header flex nav">
-      <div class="logo">Meme</div>
+      <div class="logo" onclick="onBackHome()" >Meme</div>
       <button onclick="onRenderRndImg()" class="flex-btn">I'M Flexible!</button>
       <nav class="main-nav">
         <ul class="main-menu flex clean-list li">
