--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
     <section class="modal">
       <span>Saved!🥳</span>
     </section>
-    <section class="modal1">
+    <!-- <section class="modal1">
       <h1>Welcome To My Meme Generator</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. aha yea
         Temporibus quasi voluptatibus, fugiat repudiandae iure beatae, 
         blanditiis deserunt iusto veniam voluptate, quidem praesentium repellat vel. 
         Exercitationem possimus rerum impedit minus quasi!</p>
         <button onclick="onCloseModal()">X</button>
-    </section>
+    </section> -->
     <script src="js/utils.js"></script>
     <script src="js/main.gallery-controller.js"></script>
     <script src="js/main-controller.js"></script>
